# pymetal

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
docs/: metal_wrapper_analysis.md
examples/: 01_image_blur.py  02_matrix_multiply.py  02_matrix_multiply_naive.py  02_matrix_multiply_optimized.py  02_matrix_multiply_tiled.py  03_triangle_rendering.py  04_advanced_features.py  README.md
src/: CMakeLists.txt  _pymetal.cpp
src/pymetal/: __init__.py  __main__.py  chuck_lang.py
src/pymetal/cli/: __init__.py
src/pymetal/tui/: __init__.py
tests/: __init__.py  test_phase1_compute.py  test_phase2_advanced.py  test_phase2_graphics.py  test_phase3_advanced.py
